--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "visit-penang",
   "version": "0.1.0",
+  "homepage": "https://lingges29.github.io/visit-penang",
   "private": true,
   "dependencies": {
     "axios": "^1.7.9",
@@ -13,8 +14,6 @@
     "web-vitals": "^4.2.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -40,6 +39,5 @@
   },
   "devDependencies": {
     "gh-pages": "^6.3.0"
-  },
-  "homepage": "https://lingges29/visit-penang-Geeks"
+  }
 }
